--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -547,7 +547,7 @@
                                 </group>
                             </group>
                             <group>
-                                <group name="group_tasks_managment" string="Tasks Management" col="1" class="row mt16 o_settings_container" groups="project.group_subtask_project,project.group_project_task_dependencies,project.group_project_milestone,project.group_project_recurring_tasks">
+                                <group name="group_tasks_management" string="Tasks Management" col="1" class="row mt16 o_settings_container" groups="project.group_subtask_project,project.group_project_task_dependencies,project.group_project_milestone,project.group_project_recurring_tasks">
                                     <div>
                                         <div class="o_setting_box" id="subtask_settings" groups="project.group_subtask_project">
                                             <div class="o_setting_left_pane">
@@ -595,7 +595,7 @@
                                         </div>
                                     </div>
                                 </group>
-                                <group name="group_time_managment" string="Time Management" invisible="1" col="1" class="row mt16 o_settings_container"/>
+                                <group name="group_time_management" string="Time Management" invisible="1" col="1" class="row mt16 o_settings_container"/>
                                 <group name="group_documents_analytics" string="Analytics" col="1" class="row mt16 o_settings_container" attrs="{'invisible': [('allow_rating', '=', False)]}">
                                     <div>
                                         <field name="allow_rating" invisible="1"/>
