--- a/addons/hr_attendance/views/hr_attendance_view.xml
+++ b/addons/hr_attendance/views/hr_attendance_view.xml
@@ -11,6 +11,7 @@
                 <field name="employee_id"/>
                 <field name="check_in"/>
                 <field name="check_out"/>
+                <field name="attendance_status" />
                 <field name="worked_hours" string="Work Hours" widget="float_time"/>
             </tree>
         </field>
