Resolve "Refine the modules Chala"

--- a/custom-addons/hr_retirement/views/early_retirement_request_views.xml
+++ b/custom-addons/hr_retirement/views/early_retirement_request_views.xml
@@ -26,14 +26,14 @@
                     <header class="mb-2">
                         <button string="Submit" 
                                 name="action_submit" 
-                                type="object" class="oe_highlight" 
+                                type="object" class="btn-success" 
                                 attrs="{'invisible':[('state','!=','draft')]}"
                                 confirm="Are you sure you want to submit this request?"
                         />
                         <button string="Approve" 
                                 name="action_approve" 
                                 type="object" 
-                                class="oe_highlight" 
+                                class="btn-success" 
                                 groups="user_group.group_ceo" 
                                 attrs="{'invisible':[('state','!=','submitted')]}"
                                 confirm="Are you sure you want to approve this request?"
@@ -41,7 +41,7 @@
                         <button string="Reject" 
                                 name="action_reject" 
                                 type="object" 
-                                class="oe_highlight" 
+                                class="btn-danger" 
                                 groups="user_group.group_ceo" 
                                 attrs="{'invisible':[('state','!=','submitted')]}"
                                 confirm="Are you sure you want to reject this request?"
